[package]
name = "shader"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["shader"]
description = "scene renderer"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-shader.git"
homepage = "https://github.com/nathanfaucett/rs-shader"


[dependencies]
shared = {git = "https://github.com/nathanfaucett/rs-shared.git"}
vector = {git = "https://github.com/nathanfaucett/rs-vector.git"}
uuid = {version = "0.2", features = ["v4"]}
